bug - invoice generation for plain PDF is now productive